Revision history for Perl extension Metabrik.

1.10
   - FEATURE: shell::command: use_sudo Attribute to launch sudo on executing external command
   - FEATURE: shell::command: file globbing enabled with capture Command
   - UPDATE: moved attributes_default() from brik_use_properties to brik_properties when 
     there is no need to use $self. It allows instanciated Attributes inheritage to work.
   - UPDATE: shell::command: do not print STDERR when using capture Command when there is no 
     STDERR string captured.
   - new: shell::command: execute Command to use capture_mode Attribute to launch either 
     capture or system Command
   - bugfix: core::context: save_state to use Metabrik brik_attributes Command to correctly 
     retrieve all Brik Attributes even those inherited
   - bugfix: core::shell: display error on chdir() failure
   - bugfix: core::shell: escapes " character when executing a multiline Perl/Metabrik Code
             example:
             my $test = 'root'
             for (0..1) {
                'run shell::command system "ls /$test"'
             }
   - bugfix: Metabrik: error checking within new_from_brik_init Command
   - bugfix: Metabrik: logging correctly on class calls to _log_*()

1.09
   - FEATURE: core::shell/core::context: supports passing Perl code directly as Commands
              Arguments. Example: run database::sqlite create MyTable "[ qw(field1 field2) ]"
   - RENAME: core::shell: help_show_brik_attributes => help_show_base_attributes
   - RENAME: core::shell: help_show_brik_commands => help_show_base_commands
   - RENAME: core::shell: comp_show_brik_attributes => comp_show_base_attributes
   - RENAME: core::shell: comp_show_brik_commands => comp_show_base_commands
   - UPDATE: core::shell: rework of help/completion scheme
   - UPDATE: core::shell: help Command rewritten to show help for Metabrik only (not Term:Shell)
   - bugfix: core::shell: use unique match to run Commands